fix scrollbars on landing page

--- a/WEBde/webde-geputzt.user.css
+++ b/WEBde/webde-geputzt.user.css
@@ -5,7 +5,7 @@
               Optionaler Darkstyle in den Settings verfügbar.
 @namespace    stonecrusher
 @author       stonecrusher
-@version      3.0.7
+@version      3.0.8
 @homepageURL  https://github.com/stonecrusher/stylus-UserCSS/tree/master/WEBde
 @supportURL   https://github.com/stonecrusher/stylus-UserCSS/issues
 @license      CC-BY-NC-SA-4.0
@@ -64,6 +64,9 @@
     }
     [data-content] [data-content-login] {
         justify-content: center !important;
+    }
+    .main {
+        grid-template-columns: 100% !important;
     }
     if not menu-keep {
         [aria-label="netid"],
@@ -247,7 +250,7 @@
 @-moz-document url-prefix("https://3c.web.de/mail/client/"), url-prefix("https://3c-bap.web.de/mail/client/") {
     if notiz {
         .navigation-container-bottom::before {
-            content: 'Aufgrund massiver Änderungen bei web.de muss der Userstyle neu geschrieben werden. Darkstyle ist noch nicht verfügbar. Fehlermeldungen auf Github sind willkommen. \a Aktuelle Version 3.0.7';
+            content: 'Aufgrund massiver Änderungen bei web.de muss der Userstyle neu geschrieben werden. Darkstyle ist noch nicht verfügbar. Fehlermeldungen auf Github sind willkommen. \a Aktuelle Version 3.0.8';
             background-color: #ffd800;
         }
     }
